# Edge-checker

./: .env.example  .gitignore  README.md  nixpacks.toml  pyproject.toml  railway.toml  render.yaml  requirements.txt
app/: routes.py
app/services/: acca_engine.py  football.py  odds.py
edge_checker/: __init__.py  __main__.py  checker.py  models.py
static/css/: style.css
static/js/: acca.js  main.js
templates/: 404.html  acca.html  base.html  index.html  match.html
tests/: test_checker.py
